-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.0
-
None
-
2 screens, Primary - 1080p 17inch laptop. Secondary - 32 inch 1440p external monitor
-
-
58d4645661 (qt/qtbase/dev) daabed5107 (qt/qtbase/6.3) daabed5107 (qt/tqtc-qtbase/6.3) 43ab2d4966 (qt/tqtc-qtbase/6.2)
QMenu always pops up on the primary screen, regardless of popup cordintates
Attached is the code to reproduce, the code works fine with qt 5.15 but not with qt 6.2
#include <QApplication> #include <QPushButton> #include <QMenu> #include <QAction> int main(int argc, char *argv[]) { QApplication a(argc, argv); QWidget w; auto b = new QPushButton(&w); QObject::connect(b, &QPushButton::clicked, &w, [b](bool) { auto m = new QMenu(b); m->addAction("action 1"); m->popup(b->mapToGlobal(QPoint(0, b->height()))); } ); w.show(); return a.exec(); }
- is duplicated by
-
PYSIDE-1885 regression, qcombobox popup displayed on the wrong screen
-
- Closed
-
-
QTBUG-102356 QMenu pops up on wrong screen
-
- Closed
-